[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wrg_mcp_server"
version = "1.0.5"
description = "WRG MCP server - exposes WinstonRedGuard tools to Claude and AI agents"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Yakuphan Yucel", email = "yakuphan.yucel11@gmail.com" }]
keywords = [
    "ai-agents",
    "claude",
    "mcp",
    "model-context-protocol",
    "winstonredguard",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.0.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/WRG-11/wrg-mcp-server"
Repository = "https://github.com/WRG-11/wrg-mcp-server"
Issues = "https://github.com/WRG-11/wrg-mcp-server/issues"
Documentation = "https://github.com/WRG-11/wrg-mcp-server#readme"
Changelog = "https://github.com/WRG-11/wrg-mcp-server/blob/main/CHANGELOG.md"

[project.optional-dependencies]
remote = [
    "httpx>=0.27,<1.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]
# NOTE: [threat-intel] extras temporarily removed in v1.0.4 -- PyPI rejects
# direct file:// dependencies (wrg-threat-intel + ransom-radar are not yet
# on PyPI; sister packages stay in WRG monorepo). Re-add via PyPI-resolvable
# specs once those packages publish.

[project.scripts]
wrg-mcp-server = "wrg_mcp_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/wrg_mcp_server"]

[tool.coverage.report]
# 2026-05-06: 70→95 after coverage wave 2. Current ~98%.
fail_under = 95
